[gd_scene load_steps=29 format=3 uid="uid://d1ct6bf8rf8hu"]

[ext_resource type="PackedScene" uid="uid://0vlsam3rsuls" path="res://entities/character/character.tscn" id="1_l0p38"]
[ext_resource type="Script" path="res://entities/player/player.gd" id="2_d6x48"]
[ext_resource type="Resource" uid="uid://dtbaljwmtxu2g" path="res://entities/player/resources/player_data.tres" id="3_d5n0e"]
[ext_resource type="Script" path="res://entities/player/states/idle.gd" id="4_87y4g"]
[ext_resource type="Resource" uid="uid://ccvtdrte4ayid" path="res://entities/player/resources/player_input.tres" id="4_wjquf"]
[ext_resource type="PackedScene" uid="uid://cngn4bpllm50t" path="res://entities/player/player_shoot.tscn" id="5_2dpo7"]
[ext_resource type="Script" path="res://entities/player/states/move.gd" id="5_sajx7"]
[ext_resource type="Texture2D" uid="uid://dmlnha5u43tmx" path="res://entities/player/assets/Player3.png" id="6_rb63i"]
[ext_resource type="Script" path="res://entities/player/states/jump.gd" id="6_vjwbe"]
[ext_resource type="Script" path="res://entities/player/states/attack.gd" id="7_0ohyu"]
[ext_resource type="Script" path="res://entities/player/states/falling.gd" id="7_4nng7"]
[ext_resource type="Script" path="res://entities/player/states/die.gd" id="7_m6ikd"]
[ext_resource type="Script" path="res://entities/player/states/hit.gd" id="8_r5j0r"]
[ext_resource type="Script" path="res://entities/player/states/move_and_shot.gd" id="10_4qrib"]
[ext_resource type="Script" path="res://entities/player/states/jump_and_shot.gd" id="13_eeu22"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dexg5"]
size = Vector2(13, 23)

[sub_resource type="Animation" id="Animation_0p7ik"]
resource_name = "Attack"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_nvndf"]
resource_name = "Die"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_a6iet"]
resource_name = "Falling"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_4jmql"]
resource_name = "Hit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_n1yp4"]
resource_name = "Idle"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_kurrp"]
resource_name = "Jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_y6vy7"]
resource_name = "JumpAndShot"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_r23kb"]
resource_name = "Move"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_7l055"]
resource_name = "MoveAndShot"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_efu5q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2d:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [27]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7akhy"]
_data = {
"Attack": SubResource("Animation_0p7ik"),
"Die": SubResource("Animation_nvndf"),
"Falling": SubResource("Animation_a6iet"),
"Hit": SubResource("Animation_4jmql"),
"Idle": SubResource("Animation_n1yp4"),
"Jump": SubResource("Animation_kurrp"),
"JumpAndShot": SubResource("Animation_y6vy7"),
"Move": SubResource("Animation_r23kb"),
"MoveAndShot": SubResource("Animation_7l055"),
"RESET": SubResource("Animation_efu5q")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f5y5u"]
size = Vector2(9, 22)

[node name="Player" instance=ExtResource("1_l0p38")]
position = Vector2(1, 0)
collision_layer = 1
collision_mask = 4
script = ExtResource("2_d6x48")
stats = ExtResource("3_d5n0e")
input = ExtResource("4_wjquf")
player_shoot = ExtResource("5_2dpo7")
camera_path = null
jump_time_to_peak = 0.35
jump_time_to_decend = 0.3

[node name="CameraArm" type="Marker2D" parent="." index="0"]
position = Vector2(80, -12)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="CameraArm" index="0"]

[node name="Sprite2d" parent="." index="1"]
position = Vector2(-1, -16)
texture = ExtResource("6_rb63i")
hframes = 5
vframes = 3
frame = 8

[node name="CollisionShape2d" parent="." index="2"]
position = Vector2(-1.5, -11.5)
shape = SubResource("RectangleShape2D_dexg5")

[node name="AnimationPlayer" parent="." index="3"]
libraries = {
"": SubResource("AnimationLibrary_7akhy")
}

[node name="HurtBox" parent="." index="4"]
collision_mask = 12

[node name="CollisionShape2d" parent="HurtBox" index="0"]
position = Vector2(-1.5, -11)
shape = SubResource("RectangleShape2D_f5y5u")

[node name="InvencibilityTimer" type="Timer" parent="Timers" index="0"]
wait_time = 0.5
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers" index="1"]
wait_time = 0.15
one_shot = true

[node name="ShotColdDown" type="Timer" parent="Timers" index="2"]
wait_time = 0.2
one_shot = true

[node name="Markers" type="Node2D" parent="." index="6"]

[node name="ShootPosition" type="Marker2D" parent="Markers" index="0"]
position = Vector2(11, -14)

[node name="JumpBufferFront" type="RayCast2D" parent="Sensors" index="0"]
position = Vector2(4, 0)
target_position = Vector2(0, 10)
collision_mask = 4
hit_from_inside = true

[node name="JumpBufferBack" type="RayCast2D" parent="Sensors" index="1"]
position = Vector2(-8, 0)
target_position = Vector2(0, 10)
collision_mask = 4
hit_from_inside = true

[node name="StateManager" parent="." index="8"]
max_history_lengh = 5
initial_path = NodePath("Idle")
target_path = NodePath("..")

[node name="Idle" type="Node2D" parent="StateManager" index="0"]
script = ExtResource("4_87y4g")

[node name="Attack" type="Node2D" parent="StateManager" index="1"]
script = ExtResource("7_0ohyu")

[node name="Move" type="Node2D" parent="StateManager" index="2"]
script = ExtResource("5_sajx7")

[node name="MoveAndShot" type="Node2D" parent="StateManager" index="3"]
script = ExtResource("10_4qrib")

[node name="Die" type="Node2D" parent="StateManager" index="4"]
script = ExtResource("7_m6ikd")

[node name="Jump" type="Node2D" parent="StateManager" index="5"]
script = ExtResource("6_vjwbe")

[node name="JumpAndShot" type="Node2D" parent="StateManager" index="6"]
script = ExtResource("13_eeu22")

[node name="Falling" type="Node2D" parent="StateManager" index="7"]
script = ExtResource("7_4nng7")

[node name="Hit" type="Node2D" parent="StateManager" index="8"]
script = ExtResource("8_r5j0r")

[editable path="HurtBox"]
