[gd_scene load_steps=9 format=3 uid="uid://d1o47sm6ckoeg"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_sbvtd"]
[ext_resource type="Script" path="res://entities/player/PlayerInput.gd" id="2_e3j58"]
[ext_resource type="PackedScene" uid="uid://do4nccpla7tv6" path="res://assets/kenney_mini-dungeon/Models/GLTF format/character-human.glb" id="3_8yjmw"]
[ext_resource type="PackedScene" uid="uid://bp555qutlg2ut" path="res://entities/boxes/hit_box.tscn" id="4_0ya17"]
[ext_resource type="Script" path="res://resources/damage.gd" id="5_173fk"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_je5ul"]
height = 1.8

[sub_resource type="Resource" id="Resource_dla6r"]
script = ExtResource("5_173fk")
amount = 1

[sub_resource type="BoxShape3D" id="BoxShape3D_ry5xg"]

[node name="Player" type="CharacterBody3D"]
collision_mask = 4
script = ExtResource("1_sbvtd")

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource("2_e3j58")

[node name="Model" type="Node3D" parent="."]

[node name="character-human" parent="Model" instance=ExtResource("3_8yjmw")]
transform = Transform3D(-2.6, 9.06846e-16, -2.27299e-07, 9.06846e-16, 2.6, -9.06846e-16, 2.27299e-07, -9.06846e-16, -2.6, 0, 0, -0.1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CylinderShape3D_je5ul")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="."]
update_rotation = false
update_scale = false

[node name="HitBox" parent="." instance=ExtResource("4_0ya17")]
damage = SubResource("Resource_dla6r")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 1)
shape = SubResource("BoxShape3D_ry5xg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox/CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 1)
shape = SubResource("BoxShape3D_ry5xg")
